--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fullstacks of Trash</title>
-
+  <script src='/dist/main.js' defer ></script>
 </head>
 <body>
   <h1>Fullstacks of Trash</h1>
