--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fullstacks of Trash</title>
   <link rel='stylesheet' href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <script src='/dist/main.js' defer ></script>
   <script src="https://js.stripe.com/v3/"></script>
 </head>
